        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=24024
        REGRESSION (r39845): Assertion failure in -[WebHistoryItem dictionaryRepresentation] when
        archiving a submission to about:blank

        I don't know how to make an automated test for this bug.

        * History/WebHistory.mm: (-[WebHistory _visitedURL:withTitle:method:wasFailure:]):
        * WebHistory.cpp: (WebHistory::visitedURL):
        Account for the fact that HTTP method may be non-empty for non-HTTP requests.



Canonical link: https://commits.webkit.org/33331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41256 268f45cc-cd09-0410-ab3c-d52691b4dbfc